--- a/04 WebBosch/style.css
+++ b/04 WebBosch/style.css
@@ -84,4 +84,9 @@ button{
     border-radius: 8px;
 }
 
+.checked {
+    text-decoration: line-through;
+    color: rgba(52, 131, 15, 0.555);
+    opacity: 0.7;
+}
 
